--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.4",
+    "@types/socket.io": "^2.1.4",
+    "@types/uuid": "^7.0.3",
     "jest": "^26.0.1",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "socket.io": "^2.3.0",
+    "wrtc": "^0.4.4"
   }
 }
