--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.notests.json",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
     "@types/socket.io": "^2.1.4",
     "@types/uuid": "^7.0.3",
+    "@types/webrtc": "0.0.26",
+    "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
+    "socket.io-client": "^2.3.0",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
