--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,6 +64,7 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
