--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/deep-diff": "^1.0.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
     "@types/socket.io": "^2.1.4",
@@ -26,6 +27,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "deep-diff": "^1.0.2",
     "socket.io": "^2.3.0",
     "wrtc": "^0.4.4"
   }
