--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/uuid": "^7.0.3",
     "@types/webrtc": "0.0.26",
     "babel-jest": "^26.0.1",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
     "socket.io-client": "^2.3.0",
     "ts-jest": "^25.4.0",
@@ -30,5 +31,8 @@
     "deep-diff": "^1.0.2",
     "socket.io": "^2.3.0",
     "wrtc": "^0.4.4"
+  },
+  "husky": {
+    "pre-push": "npm run test && npm run build && git add dist && git commit -m 'dist bump'"
   }
 }
