--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run test && npm run build"
+      "pre-push": "npm run test && npm run test:acceptance"
     }
   }
 }
