--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "deep-diff": "^1.0.2",
     "socket.io": "^2.3.0",
-    "wrtc": "^0.4.4"
+    "wrtc": "^0.4.4",
+    "uuid": "^8.0.0"
   },
   "husky": {
     "hooks": {
