--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "gamestate",
+  "name": "gamestate-server",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.notests.json",
-    "test": "jest lib",
+    "test": "jest",
     "test:acceptance": "npm run build && jest acceptance-tests"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Tuomas Nylund",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
@@ -25,7 +25,6 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "socket.io-client": "^2.3.0",
-    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
