use node 14 for development and export the libraries as es modules instead of common js modules

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "main": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "./build.sh"
   },
