rename the library from gamestate to shared-state

--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,21 @@
 {
-  "name": "gamestate-client",
-  "version": "1.0.0",
-  "description": "A library for synchronizing states between a server and multiple clients",
+  "name": "shared-state-client",
+  "version": "0.1.0",
+  "description": "A library for synchronizing states between a server and multiple clients using WebRTC and WebSockets",
+  "keywords": [
+    "shared",
+    "synchronized",
+    "shared state",
+    "synchronized state",
+    "state",
+    "webrtc",
+    "websockets",
+    "server",
+    "game"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tunylund/gamestate"
+    "url": "https://github.com/tunylund/shared-state"
   },
   "main": "dist/index.mjs",
   "types": "dist/index.d.ts",
