--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "shared-state-client",
   "version": "0.1.0",
   "description": "A library for synchronizing states between a server and multiple clients using WebRTC and WebSockets",
+  "homepage": "https://github.com/tunylund/shared-state",
   "keywords": [
     "shared",
     "synchronized",
