--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
+    "@types/rfdc": "^1.1.0",
     "@types/socket.io": "^2.1.4",
     "@types/uuid": "^7.0.3",
     "@types/webrtc": "0.0.26",
@@ -43,6 +44,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/deep-diff": "^1.0.0",
+    "deep-diff": "^1.0.2",
+    "jsondiffpatch": "^0.4.1",
+    "rfdc": "^1.1.4",
     "socket.io": "^2.3.0",
     "uuid": "^8.0.0",
     "wrtc": "^0.4.5"
