--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "files": [
-    "dist/*"
+    "dist/*",
+    "src/*"
   ],
   "scripts": {
     "build": "./build.sh"
