use public github urls in typescript example to make it usable outside my dev machine

--- a/typescript-example/server/package.json
+++ b/typescript-example/server/package.json
@@ -21,7 +21,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "tiny-game-engine": "git@github.com:tunylund/tiny-game-engine.git",
+    "tiny-game-engine": "tunylund/tiny-game-engine",
     "shared-state-server": "../../server"
   }
 }
