--- a/typescript-example/client/package.json
+++ b/typescript-example/client/package.json
@@ -16,7 +16,7 @@
     "deep-diff": "^1.0.2",
     "shared-state-client": "file:../../client",
     "socket.io-client": "^2.3.0",
-    "tiny-game-engine": "git+ssh://git@github.com/tunylund/tiny-game-engine.git"
+    "tiny-game-engine": "tunylund/tiny-game-engine"
   },
   "author": "Tuomas Nylund",
   "license": "MIT",
