--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "shared-state-server",
   "version": "0.2.1",
   "description": "A library for synchronizing states between a server and multiple clients using WebRTC and WebSockets",
-  "homepage": "https://github.com/tunylund/shared-state",
+  "homepage": "https://tunylund.github.io/shared-state",
   "keywords": [
     "shared",
     "synchronized",
