Remove dependency to tiny-game-engine to avoid compilition issues that the transient dependency to node-gyp cause

--- a/typescript-example/client/package.json
+++ b/typescript-example/client/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "shared-state-client": "file:../../client",
-    "socket.io-client": "^4.5.1",
-    "tiny-game-engine": "tunylund/tiny-game-engine"
+    "socket.io-client": "^4.5.1"
   },
   "author": "Tuomas Nylund",
   "license": "MIT",
