--- a/client-grpc/package.json
+++ b/client-grpc/package.json
@@ -33,6 +33,7 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/deep-diff": "^1.0.1",
     "deep-diff": "^1.0.2",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "long": "^5.2.1",
+    "nice-grpc": "^2.0.1",
     "nice-grpc-web": "^2.0.1",
     "protobufjs": "^7.1.2"
   }
