--- a/client-grpc-browser/package.json
+++ b/client-grpc-browser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shared-state-server",
+  "name": "shared-state-browser-client",
   "version": "0.2.5",
   "description": "A library for synchronizing states between a server and multiple clients using WebRTC and WebSockets",
   "homepage": "https://tunylund.github.io/shared-state",
@@ -11,7 +11,7 @@
     "state",
     "webrtc",
     "websockets",
-    "server",
+    "client",
     "game"
   ],
   "repository": {
@@ -19,28 +19,26 @@
     "url": "https://github.com/tunylund/shared-state"
   },
   "main": "./dist/index.js",
-  "exports": "./dist/index.js",
+  "exports": "./dist/bundle.mjs",
+  "types": "dist/index.d.ts",
   "type": "module",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist/*",
     "src/*"
   ],
   "scripts": {
-    "build": "./build.sh",
-    "test": "jest"
+    "build": "./build.sh"
   },
   "author": "Tuomas Nylund",
   "license": "MIT",
   "devDependencies": {
-    "@types/deep-diff": "^1.0.1",
-    "@types/uuid": "^8.3.4"
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "rollup": "^2.74.1",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "deep-diff": "^1.0.2",
-    "jsondiffpatch": "^0.4.1",
-    "nice-grpc": "^2.0.1",
-    "rfdc": "^1.3.0",
-    "uuid": "^8.3.2"
+    "nice-grpc-web": "^2.0.1"
   }
 }
