--- a/client-grpc/package.json
+++ b/client-grpc/package.json
@@ -35,18 +35,10 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/deep-diff": "^1.0.1",
-    "deep-diff": "^1.0.2",
-    "grpc-tools": "^1.12.3",
     "rollup": "^2.74.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-proto": "^1.137.0",
-    "typescript": "^4.6.0"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "long": "^5.2.1",
-    "nice-grpc": "^2.0.1",
-    "nice-grpc-web": "^2.0.1",
-    "protobufjs": "^7.1.2"
+    "nice-grpc": "^2.0.1"
   }
 }
