--- a/server/package.json
+++ b/server/package.json
@@ -44,9 +44,9 @@
   "dependencies": {
     "deep-diff": "^1.0.2",
     "jsondiffpatch": "^0.4.1",
+    "node-datachannel": "^0.26.0",
     "rfdc": "^1.3.0",
     "socket.io": "^4.5.1",
-    "uuid": "^8.3.2",
-    "wrtc": "^0.4.7"
+    "uuid": "^8.3.2"
   }
 }
