--- a/client/package.json
+++ b/client/package.json
@@ -32,15 +32,14 @@
   "author": "Tuomas Nylund",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/deep-diff": "^1.0.1",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@types/deep-diff": "^1.0.5",
     "deep-diff": "^1.0.2",
-    "rollup": "^2.74.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.6.0"
+    "rollup": "^4.36.0",
+    "typescript": "^5.8.2"
   },
   "peerDependencies": {
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.x"
   }
 }
