--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/deep-diff": "^1.0.5",
     "deep-diff": "^1.0.2",
